# clinical.reference-msk

./: README.md  manifest.webmanifest  package-lock.json  package.json  service-worker.js
.github/workflows/: desktop.yml
assets/fonts/: fonts.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
