[package]
name = "clinical-reference"
version = "1.0.0"
description = "Clinical Reference - the integrated clinical hub"
authors = ["Clinical Reference"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"

# Smaller, faster release binaries
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
